[package]
name = "rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = '1.4' }
webrtc = "0.14.0"
tokio-tungstenite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-websockets = { version = "0.12.1" }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redis = "*"
dotenv = "0.15.0"
